--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
 # Compiled output
 /dist
@@ -8,8 +8,10 @@
 
 # Node
 /node_modules
+node_modules/
 npm-debug.log
 yarn-error.log
+package-lock.json
 
 # IDEs and editors
 .idea/
@@ -40,3 +42,29 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Angular
+/dist
+/out-tsc
+/.angular
+/.vscode
+/.idea
+
+# Environment
+src/environments/*.ts
+# Mac
+.DS_Store
+
+# Logs
+logs/
+*.log
+
+# Tailwind
+tailwind.config.js
+postcss.config.js
+
+# Others
+.idea/
+.vscode/
+*.sublime-workspace
+*.sublime-project
