--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
   "name": "barbosa-code-angular",
-  "version": "0.0.0",
+  "version": 2,
+  "builds": [
+    {
+      "src": "dist/barbosa-code-angular/browser",
+      "use": "@vercel/static-build"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ],
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
