--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "build": "npx ng build --configuration production",
+    "watch": "npx ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:barbosa-code-angular": "node dist/barbosa-code-angular/server/server.mjs"
   },
